syntax = "proto2";

package server;

message server_msg{
  enum Operation {
    GET = 1;
    PUT = 2;
  }

  required Operation operation = 1;
  required int32 key = 2;
  optional string value = 3;
  required boolean success = 4; // whether the request was successful from server to client
}
